--- a/fopasg/pom.xml
+++ b/fopasg/pom.xml
@@ -36,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>com.mycompany.fopasg.App</mainClass>
+                    <mainClass>com.mycompany.frontend.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
