--- a/fopasg/pom.xml
+++ b/fopasg/pom.xml
@@ -32,8 +32,8 @@
         </dependency>
     </dependencies>
     <build>
-        <sourceDirectory>src/main/java/com/mycompany/fopasg</sourceDirectory>
-        <testSourceDirectory>src/test/java/com/mycompany/fopasg</testSourceDirectory>
+        <!-- <sourceDirectory>src/main/java/com/mycompany/fopasg</sourceDirectory>
+        <testSourceDirectory>src/test/java/com/mycompany/fopasg</testSourceDirectory> -->
         <!-- <resources>
             <resource>
                 <directory>src/main/resources</directory>
