--- a/fopasg/pom.xml
+++ b/fopasg/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>guava</artifactId>
             <version>33.3.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <!-- <sourceDirectory>src/main/java/com/mycompany/fopasg</sourceDirectory>
