--- a/fopasg/pom.xml
+++ b/fopasg/pom.xml
@@ -62,6 +62,11 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.29</version> 
+        </dependency>
     </dependencies>
     <build>
         <plugins>
