--- a/fopasg/pom.xml
+++ b/fopasg/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.29</version> 
         </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
